--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,29 @@
-<div class="container">
-  <div id="header">
-    <nav role="navigation">
-      <div id="menuToggle">
-          <input type="checkbox" />
-        <span></span>
-        <span></span>
-        <span></span>
-        <ul id="menu">
-          <a href="#"><li>Home</li></a>
-          <a routerLink="login"><li>Login</li></a>
-          <a href="#" routerLink="plans"><li>Plans</li></a>
-          <a href="#"><li>Amenities</li></a>
-            <a routerLink="stour"><li>Tour</li></a>
-          <a href="#"><li>Book A Conference</li></a>
-          <a href="#"><li>Gallery</li></a>
-          <a href="#" routerLink="contact"><li>Contact US</li></a>
-          <a href="#" routerLink="about"><li>About Us</li></a>
-        </ul>
-      </div>
-    </nav>
+<div class="header-container">
+
+  <div id="header-label">
+    <h3>Unity</h3>
+    <p>A Co-Working Space</p>
   </div>
+  <div id="header-gif-container">
+  </div>
+  <!-- Default dropleft button -->
+  <img src="../../assets/images/logo-green.png" alt="">
+  <div class="btn-group dropleft menu-button">
+    <button type="button" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Menu
+    </button>
+    <div class="dropdown-menu">
+      <!-- Dropdown menu links -->
+      <a href="#"><li>Home</li></a>
+      <a routerLink="login"><li>Login</li></a>
+      <a href="#" routerLink="plans"><li>Plans</li></a>
+      <a href="#"><li>Amenities</li></a>
+      <a routerLink="stour"><li>Tour</li></a>
+      <a href="#"><li>Book A Conference</li></a>
+      <a href="#"><li>Gallery</li></a>
+      <a href="#" routerLink="contact"><li>Contact US</li></a>
+      <a href="#" routerLink="about"><li>About Us</li></a>
+    </div>
+  </div>
+
 </div>
