--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,46 +1,72 @@
-@import "hamburger.scss";
 
-.container {
+.header-container {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
+  height: 5rem;
+  background-color: rgba(123,164,156,1);
+  margin-bottom: 2rem;
+};
 
-  height: auto;
+.header-container img {
+  align-self: center;
+  margin-top: 3.5rem;
+  margin-left: 5rem;
+
 }
 
-button {
+
+
+
+// button
+.menu-button {
+  // align-self: flex-start;
+}
+
+.dropdown-menu {
+ opacity: .9;
+ // padding: 1rem;
+
+}
+
+
+#header-label{
+  align-self: flex-start;
   position: absolute;
-  left: 350px;
-  top: 25px;
+  color: black;
+  z-index: 100;
+  top: .08rem;
+  margin-left: 5%;
 }
 
 
-
-#dropdown  {
-  display: none;
-  li {
-    list-style-type: none;
-    text-transform: uppercase;
-  }
-
-}
-
-@media only screen and (min-width: 500px) {
-  #header {
-    background-image: url(../../assets/images/header-img.png);
-    background-repeat: no-repeat;
-    width: 400px;
-    height: 120px;
-    margin: 5px auto 20px auto;
-    // position: relative;
-  }
-}
+// @media only screen and (min-width: 500px) {
+//   #header {
+//     background-image: url(../../assets/images/header-img.png);
+//     background-repeat: no-repeat;
+//     width: 400px;
+//     height: 120px;
+//     margin: 5px auto 20px auto;
+//     // position: relative;
+//   }
+// }
 
 
 // @media only screen and (min-width: 800px) {
+//   #header {
+//     background-image: url(../../assets/images/header-big.png);
+//     background-repeat: no-repeat;
+//     width: 1000px;
+//     height: auto;
+//     margin: 5px auto 20px auto;
+//     // position: relative;
+//   }
+// }
+
+
+// @media only screen and (min-width: 1200px) {
 //   #header {
 //     background-image: url(../../assets/images/header-big.png);
 //     background-repeat: no-repeat;
