--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,7 +3,7 @@
   display: -ms-flexbox;
   display: flex;
   display: inline-block;
-  background-color: #D2E0DB;
+  background-color: #7ba49c;
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
