--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 #footer {
   display: flex;
   display:inline-block;
-  background-color: #D2E0DB;
+  background-color: rgba(123,164,156,1);
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
