--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,4 @@
-@import "../header/header.component.scss";
+// @import "../header/header.component.scss";
 @mixin flex-plan-preview {
   .plans-preview{
     display: flex;
@@ -13,6 +13,8 @@
     font-weight: bolder;
     text-align: center;
     padding-top: 10px;
+    background-color: rgba(255,255,255,0.4)
+    col
     // background-image: url(../../assets/images/plans-preview/motion_cube.gif);
     //  background-repeat: no-repeat;
     //  background-attachment: fixed;
@@ -20,67 +22,60 @@
   }
 }
 
-#tour-button {
-  border-style: solid;
+#tour-button, #fancy-button {
   border-color: #979797;
-  border-width: 1px;
-  // border-radius: 1;
-  padding: 5px 2.5px 5px 2.5px ;
-
+  border-width: 4px;
+  border-style: double;
+  border-radius: 0rem;
+  padding: 2px 6px;
 }
 
-.tour-button-border {
-  // border: 7px 2.5px 7px 2.5px
-  border-style: solid;
-  border-color: #979797;
-  border-width: 1px;
-  padding: 7px 2.5px 7px 2.5px ;
-  // border: 7px 2.5px 7px 2.5px ;
-  max-width: 159px;
-}
+
 
 // -------------Tour With US POP UP------------
-#tour-with-us{
-  visibility: hidden;
-  position: absolute;
-}
 
 
 // --------------------------------------------------
 
+#amenities-a{
+  display: flex;
+  flex-direction: column;
+}
+
+#amenities-image{
+  margin-top: 1rem;
+}
 
 #amenities-preview {
-  // background-image: url(../../assets/images/amenities-preview.png);
-  width: auto;
-  height: 180px;
-  // margin-right: 18px;
-  // margin-top: 20px;
-  // position: relative;
-  text-align: center;
+  display: flex;
   color: white;
 
 }
-#amenities-preview a {
-  background-color: white;
-  width: 100%;
-  height: 100%;
-}
-
 
 // -------------Plans Section---------------
+#plans-preview-section{
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+
+}
+#fancy-button-border-plans{
+// align-self: center;
+  // margin-left: 7rem;
+}
+
 #plans-preview-container {
   @include flex-plan-preview;
   max-width: auto;
   // margin-top: 200px;
   display: block;
-
 }
 
-#plans-h3 {
-margin-top: 40px;
-text-align: center;
-  // max-width: auto;
-  // text-align: center;
+
+
+.fancy-button-border{
+// margin-left: 50%;
+align-self: center;
 }
 
 .plans-preview {
@@ -91,6 +86,8 @@ text-align: center;
   border-color: gray;
   border-radius: 8px;
   margin: 10px auto;
+  box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
+  border: .125rem solid transparent;
 
 }
 
@@ -103,12 +100,29 @@ text-align: center;
   border-color: gray;
   border-radius: 8px;
   background-color: rgba(255,255,255,0.1);
-  // background-image: url(../../assets/images/plans-preview/motion_cube.gif);
-  // background-repeat: no-repeat;
-  // background-attachment: fixed;
-  // background-position: center;
-  // background-size: 100%;
+  box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
+  border: .125rem solid transparent;
 
+
+}
+
+.plans-preview-text {
+  opacity: 100;
+  z-index: 10;
+  width: 84px;
+  height: 84px;
+  border-style: solid;
+  border-width: .5px;
+  border-color: gray;
+  border-radius: 8px;
+  padding-top: 2rem;
+  background-color: rgba(255,255,255,0.1);
+  box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
+  border: .125rem solid transparent;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  color: white;
 }
 
 #day-plan-preview{
@@ -137,21 +151,7 @@ text-align: center;
   z-index: 0;
 }
 
-.plans-preview-text {
-  opacity: 100;
-  z-index: 10;
-  width: 84px;
-  height: 84px;
-  border-style: solid;
-  border-width: .5px;
-  border-color: gray;
-  border-radius: 8px;
-  padding-top: 20px;
-  background-color: rgba(255,255,255,0.1);
-  text-align: center;
-  justify-content: center;
-  align-content: center;
-}
+
 // ------------------------------------------------
 #home-container {
   display: flex;
@@ -166,9 +166,9 @@ text-align: center;
 
   // display: block;
 
-  width: 159px;
-  z-index: 0
-  ;
+  // width: 159px;
+
+  z-index: 0  ;
 
 }
 .preview-icons {
@@ -184,12 +184,18 @@ text-align: center;
   margin-bottom: 20px;
 }
 
-// #carousel-section img {
-//   display: block;
-//   min-height: 500px;
-//   max-height: 500px;
-// }
+#carousel-section {
+// background-image: url(../../assets/images/carousel/gold-p1.jpg);
+background-size: contain;
+height: 500px;
+width: auto;
+}
 
+#carouselExampleIndicators{
+  max-height: 95%;
+  max-width: 80%;
+  margin-left: 10%;
+}
 
 @media only screen and (max-width:500px) {
   #carousel-section {
@@ -220,5 +226,14 @@ text-align: center;
     // min-height: 600px;
     max-height: 600px;
   }
+  #plans-preview-container {
+      display: flex;
+       // flex-direction: row;
+       justify-content: space-around;
+       align-content: space-around;
+       min-width: 975px;
+       max-width: 1000px;
+  }
+
 
 }
