add flex to tour page, align items, adjust size and style of text

--- a/src/app/stour/stour.component.html
+++ b/src/app/stour/stour.component.html
@@ -1,12 +1,14 @@
-<div class="">
-  <h3>Tour With Us</h3>
-  <div class="">
-    <p>Full Name: <input type="text" name="" value="" placeholder="Required"> </p>
-    <p>Email: <input type="text" name="" value="" placeholder="Required"> </p>
-    <p>Phone: <input type="text" name="" value="" placeholder="Required"> </p>
+<div id="tour-container">
+  <div id="tour-subcontainer">
+    <h3>Tour With Us</h3>
+    <div class="">
+      <p>Full Name: <input type="text" name="" value="" placeholder="Required"> </p>
+      <p>Email: <input type="text" name="" value="" placeholder="Required"> </p>
+      <p>Phone: <input type="text" name="" value="" placeholder="Required"> </p>
+    </div>
+    <h5>Tour Date</h5>
+    <p>Date <span>*</span> <input type="text" name="" value="" placeholder="Date"> </p>
+    <p>Time <span>*</span> <input type="text" name="" value="" placeholder="Time"> </p>
+    <button type="button" class="btn btn-outline-info submit-button" name="button">Submit</button>
   </div>
-  <p>Tour Date</p>
-  <p>Date <span>*</span> <input type="text" name="" value="" placeholder="Date"> </p>
-  <p>Time <span>*</span> <input type="text" name="" value="" placeholder="Time"> </p>
-  <button type="button" class="btn btn-primary" name="button">Submit</button>
-</div>
+  </div>
