remove unused commented out code

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,8 +13,8 @@
     font-weight: bolder;
     text-align: center;
     padding-top: 10px;
-    background-color: rgba(255,255,255,0.4)
-    col
+    background-color: rgba(255,255,255,0.4);
+
     // background-image: url(../../assets/images/plans-preview/motion_cube.gif);
     //  background-repeat: no-repeat;
     //  background-attachment: fixed;
@@ -88,7 +88,6 @@ align-self: center;
   margin: 10px auto;
   box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
   border: .125rem solid transparent;
-
 }
 
 
@@ -102,8 +101,6 @@ align-self: center;
   background-color: rgba(255,255,255,0.1);
   box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
   border: .125rem solid transparent;
-
-
 }
 
 .plans-preview-text {
