--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -52,7 +52,7 @@
     font-weight: bolder;
     text-align: center;
     padding-top: 10px;
-    background-color: rgba(255, 255, 255, 0.4) col; }
+    background-color: rgba(255, 255, 255, 0.4); }
 
 .fancy-button-border {
   -ms-flex-item-align: center;
