--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,7 +3,9 @@
   border-width: 4px;
   border-style: double;
   border-radius: 0rem;
-  padding: 2px 6px; }
+  padding: 2px 6px;
+  color: black;
+  text-decoration: none; }
 
 #amenities-a {
   display: -webkit-box;
@@ -12,7 +14,8 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column; }
+  flex-direction: column;
+  text-decoration: none; }
 
 #amenities-image {
   margin-top: 1rem; }
