--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -28,6 +28,8 @@
   border-style: double;
   border-radius: 0rem;
   padding: 2px 6px;
+  color: black;
+  text-decoration: none;
 }
 
 
@@ -40,6 +42,7 @@
 #amenities-a{
   display: flex;
   flex-direction: column;
+  text-decoration: none;
 }
 
 #amenities-image{
