--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,10 @@
   <div id="header-gif-container">
   </div>
   <!-- Default dropleft button -->
-  <img src="../../assets/images/logo-green.png" alt="">
+  <a href="#" routerlink="#">
+    <img src="../../assets/images/logo-green.png" alt="" >
+  </a>
+
   <div class="btn-group dropleft menu-button">
     <button type="button" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Menu
