--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,6 +42,16 @@
   margin-left: 5%;
 }
 
+#header-label h3 {
+  margin-top: .5rem;
+  font-weight: 300;
+}
+
+#header-label p {
+  font-size: .8rem;
+  font-weight: 300;
+}
+
 
 // @media only screen and (min-width: 500px) {
 //   #header {
