--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
       <a href="#"><li>Home</li></a>
       <a routerLink="login"><li>Login</li></a>
       <a href="#" routerLink="plans"><li>Plans</li></a>
-      <a href="#"><li>Amenities</li></a>
+      <a href="#" routerLink="amenities"><li>Amenities</li></a>
       <a routerLink="stour"><li>Tour</li></a>
       <a href="#"><li>Book A Conference</li></a>
       <a href="#"><li>Gallery</li></a>
