--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -31,6 +31,11 @@
 .dropdown-menu a li {
   text-decoration: none;
   color: black;
+  margin-left: .5rem;
+}
+
+.dropdown-menu a {
+  text-decoration: none;
 }
 
 #header-label{
