add flex to login page, change button style, adjust spacing

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,9 @@
   <div id="login-items">
     <input type="text" name="Email" value="" placeholder="Email: ">
     <input type="text" name="" value="" placeholder="Password: ">
-    <button type="button" class="btn btn-primary" name="button">Login</button>
-    <a><input type="checkbox" name="" value="" id="checkbox"> Keep me logged in</a>
+
+    <a>
+      <input type="checkbox" name="" value="" id="checkbox"> Keep me logged in</a>
+    <button type="button" class="btn btn-outline-info" name="button">Login</button>
   </div>
 </div>
