--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,18 @@
 .login-container {
-  max-width: 400px;
-  margin-left: 45%; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 3rem; }
+
+.login-container h3 {
+  margin-bottom: .7rem; }
 
 #login-items {
   display: -webkit-box;
@@ -21,6 +33,9 @@
   justify-content: center;
   text-align: center; }
 
+#login-items a {
+  margin-right: 1rem; }
+
 button {
-  margin-top: .2rem;
+  margin-top: .7rem;
   margin-right: 7rem; }
