--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -53,3 +53,7 @@
 #header-label p {
   font-size: .8rem;
   font-weight: 300; }
+
+@media only screen and (min-width: 950px) {
+  .header-container {
+    display: none; } }
