--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -57,7 +57,11 @@
   font-weight: 300;
 }
 
-
+@media only screen and (min-width: 950px){
+  .header-container{
+    display: none;
+  }
+}
 // @media only screen and (min-width: 500px) {
 //   #header {
 //     background-image: url(../../assets/images/header-img.png);
