create unordered list of links in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,4 +28,19 @@
       <a href="#" routerLink="about"><li>About Us</li></a>
     </div>
   </div>
+  <div id="links">
+    <div class="">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a routerLink="login">Login</a></li>
+        <li><a href="#" routerLink="plans">Plans</a></li>
+        <li><a href="#" routerLink="amenities">Amenities</a></li>
+        <li><a routerLink="stour">Tour</a></li>
+        <li><a href="#">Book A Conference</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#" routerLink="contact">Contact US</a></li>
+        <li><a href="#" routerLink="about">About Us</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
