--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -55,5 +55,5 @@
   font-weight: 300; }
 
 @media only screen and (min-width: 950px) {
-  .header-container {
+  .btn-group {
     display: none; } }
