create unordered list of links in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,6 @@
       <a href="#" routerLink="plans"><li>Plans</li></a>
       <a href="#" routerLink="amenities"><li>Amenities</li></a>
       <a routerLink="stour"><li>Tour</li></a>
-      <a href="#"><li>Book A Conference</li></a>
       <a href="#"><li>Gallery</li></a>
       <a href="#" routerLink="contact"><li>Contact US</li></a>
       <a href="#" routerLink="about"><li>About Us</li></a>
@@ -33,13 +32,12 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a routerLink="login">Login</a></li>
-        <li><a href="#" routerLink="plans">Plans</a></li>
+        <li><a routerLink="plans">Plans</a></li>
         <li><a href="#" routerLink="amenities">Amenities</a></li>
         <li id="stour-break"><a routerLink="stour">Tour</a></li>
       </ul>
       <br>
       <ul>
-        <li><a href="#">Book A Conference</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#" routerLink="contact">Contact US</a></li>
         <li><a href="#" routerLink="about">About Us</a></li>
