--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,30 +17,30 @@
     </button>
     <div class="dropdown-menu">
       <!-- Dropdown menu links -->
-      <a href="#"><li>Home</li></a>
+      <a routerLink="home"><li>Home</li></a>
       <a routerLink="login"><li>Login</li></a>
-      <a href="#" routerLink="plans"><li>Plans</li></a>
-      <a href="#" routerLink="amenities"><li>Amenities</li></a>
+      <a  routerLink="plans"><li>Plans</li></a>
+      <a  routerLink="amenities"><li>Amenities</li></a>
       <a routerLink="stour"><li>Tour</li></a>
-      <a href="#"><li>Gallery</li></a>
-      <a href="#" routerLink="contact"><li>Contact US</li></a>
-      <a href="#" routerLink="about"><li>About Us</li></a>
+      <a routerLink="gallery"><li>Gallery</li></a>
+      <a  routerLink="contact"><li>Contact US</li></a>
+      <a  routerLink="about"><li>About Us</li></a>
     </div>
   </div>
   <div id="header-links">
     <div id="header-links-list">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a routerLink="home">Home</a></li>
         <li><a routerLink="login">Login</a></li>
         <li><a routerLink="plans">Plans</a></li>
-        <li><a href="#" routerLink="amenities">Amenities</a></li>
+        <li><a  routerLink="amenities">Amenities</a></li>
         <li id="stour-break"><a routerLink="stour">Tour</a></li>
       </ul>
       <br>
       <ul>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#" routerLink="contact">Contact US</a></li>
-        <li><a href="#" routerLink="about">About Us</a></li>
+        <li><a routerLink="gallery">Gallery</a></li>
+        <li><a  routerLink="contact">Contact US</a></li>
+        <li><a  routerLink="about">About Us</a></li>
       </ul>
 
 
