create unordered list of links in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,8 +28,8 @@
       <a href="#" routerLink="about"><li>About Us</li></a>
     </div>
   </div>
-  <div id="links">
-    <div class="">
+  <div id="header-links">
+    <div id="header-links-list">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a routerLink="login">Login</a></li>
