--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -54,6 +54,12 @@
   font-size: .8rem;
   font-weight: 300; }
 
+#header-links {
+  text-decoration: none;
+  display: none; }
+
 @media only screen and (min-width: 950px) {
   .btn-group {
-    display: none; } }
+    display: none; }
+  #header-links {
+    display: initial; } }
