--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -57,9 +57,17 @@
   font-weight: 300;
 }
 
+#header-links{
+  text-decoration: none;
+  display: none;
+}
+
 @media only screen and (min-width: 950px){
   .btn-group{
     display: none;
+  }
+  #header-links {
+    display: initial;
   }
 }
 // @media only screen and (min-width: 500px) {
