--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,7 +3,10 @@
   display: -ms-flexbox;
   display: flex;
   display: inline-block;
-  background-color: #7ba49c;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#4d9787), color-stop(#5a9a8c), color-stop(#669e91), color-stop(#71a196), to(#7ca49b));
+  background-image: -webkit-linear-gradient(bottom, #4d9787, #5a9a8c, #669e91, #71a196, #7ca49b);
+  background-image: -o-linear-gradient(bottom, #4d9787, #5a9a8c, #669e91, #71a196, #7ca49b);
+  background-image: linear-gradient(to top, #4d9787, #5a9a8c, #669e91, #71a196, #7ca49b);
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
