--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,9 @@
 #footer {
   display: flex;
   display:inline-block;
-  background-color: rgba(123,164,156,1);
+  // background-color: rgba(123,164,156,1);
+background-image: linear-gradient(to top, #4d9787, #5a9a8c, #669e91, #71a196, #7ca49b);
+
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
@@ -10,6 +12,7 @@
    display: block;
    z-index: 100;
 }
+
 
 @mixin social-icon {
   height: 40px;
