--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,7 +6,8 @@
   align-items: center;
   width: 100%;
   height: 5rem;
-  background-color: rgba(123,164,156,1);
+  // background-color: rgba(123,164,156,1);
+  background-image: linear-gradient(to bottom, #4d9787, #5a9a8c, #669e91, #71a196, #7ca49b);
   margin-bottom: 2rem;
 };
 
