--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -65,6 +65,10 @@
   list-style-type: none;
 }
 
+#header-links ul:nth-child(1){
+margin-top: .9rem;
+}
+
 #header-links ul li {
 margin: auto 1rem;
 }
