create unordered list of links in header

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -17,7 +17,7 @@
   background-color: #7ba49c;
   margin-bottom: 2rem; }
 
-.header-container img {
+#header-logo {
   -ms-flex-item-align: center;
   align-self: center;
   margin-top: 3.5rem;
@@ -55,11 +55,27 @@
   font-weight: 300; }
 
 #header-links {
-  text-decoration: none;
   display: none; }
 
-@media only screen and (min-width: 950px) {
+#header-links ul {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  list-style-type: none; }
+
+#header-links ul li {
+  margin: auto 1rem; }
+
+#header-links ul li a {
+  color: white; }
+
+@media only screen and (min-width: 1124px) {
   .btn-group {
     display: none; }
   #header-links {
-    display: initial; } }
+    display: initial; }
+  #header-logo {
+    -ms-flex-item-align: center;
+    align-self: center;
+    margin-top: 3.5rem;
+    margin-left: 32rem; } }
