--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,10 @@
     <h3>Unity</h3>
     <p>A Co-Working Space</p>
   </div>
-  <div id="header-gif-container">
+  <div id="filler">
   </div>
   <!-- Default dropleft button -->
-  <a href="#" routerlink="#">
+  <a href="#" routerlink="#" id="header-logo">
     <img src="../../assets/images/logo-green.png" alt="" >
   </a>
 
@@ -35,12 +35,17 @@
         <li><a routerLink="login">Login</a></li>
         <li><a href="#" routerLink="plans">Plans</a></li>
         <li><a href="#" routerLink="amenities">Amenities</a></li>
-        <li><a routerLink="stour">Tour</a></li>
+        <li id="stour-break"><a routerLink="stour">Tour</a></li>
+      </ul>
+      <br>
+      <ul>
         <li><a href="#">Book A Conference</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#" routerLink="contact">Contact US</a></li>
         <li><a href="#" routerLink="about">About Us</a></li>
       </ul>
+
+
     </div>
   </div>
 </div>
