--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
     <img src="../../assets/images/social/instagram-white.png" alt="" class="social-icon" id="instagram-icon">
   </div>
   <div id="contact-info">
-    <p>Hours: 9-5 Mon-Fri</p>
-    <p>Phone: 555-555-555</p>
+    <p><span id="contact-info-bold">Hours:</span>Mon-Fri <a> - </a> 9AM-5PM</p>
+    <p><span id="contact-info-bold">Phone:</span> 555-555-555</p>
   </div>
 </div>
