update login button link

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,6 +7,7 @@
 
     <a>
       <input type="checkbox" name="" value="" id="checkbox"> Keep me logged in</a>
-    <button type="button" class="btn btn-outline-info" name="button">Login</button>
+
+    <a routerLink="/"><button type="button" class="btn btn-outline-info" name="button">Login</button></a>
   </div>
 </div>
