--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
+  margin-top: 20rem;
   position: fixed;
   bottom: 0;
   display: block;
