--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,6 +6,7 @@ background-image: linear-gradient(to top, #4d9787, #5a9a8c, #669e91, #71a196, #7
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
+  margin-top: 20rem;
   position:fixed;
    bottom: 0;
    display: block;
