modify home link in header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
     </button>
     <div class="dropdown-menu">
       <!-- Dropdown menu links -->
-      <a routerLink="home"><li>Home</li></a>
+      <a routerLink="/"><li>Home</li></a>
       <a routerLink="login"><li>Login</li></a>
       <a  routerLink="plans"><li>Plans</li></a>
       <a  routerLink="amenities"><li>Amenities</li></a>
@@ -29,7 +29,7 @@
   <div id="header-links">
     <div id="header-links-list">
       <ul>
-        <li><a routerLink="home">Home</a></li>
+        <li><a routerLink="/">Home</a></li>
         <li><a routerLink="login">Login</a></li>
         <li><a routerLink="plans">Plans</a></li>
 
